--- a/articles/azure-cache-for-redis/TOC.yml
+++ b/articles/azure-cache-for-redis/TOC.yml
@@ -36,7 +36,7 @@
     - name: Beste praktijken
       items:
         - name: Best practices voor Azure Cache voor Redis
-          href: 'https://gist.github.com/JonCole/925630df72be1351b21440625ff2671f'
+          href: cache-best-practices.md
         - name: Best practices van Azure Architecture voor caching
           href: 'https://docs.microsoft.com/azure/architecture/best-practices/caching?toc=%2Fazure%2Fredis-cache%2Ftoc.json'
 - name: Handleidingen
