--- a/articles/hdinsight/domain-joined/TOC.yml
+++ b/articles/hdinsight/domain-joined/TOC.yml
@@ -14,8 +14,6 @@
   items:
     - name: Plan voor ESP-clusters
       href: apache-domain-joined-architecture.md
-    - name: ESP-clusters maken en synchroniseren met on-premises
-      href: apache-domain-joined-create-configure-enterprise-security-cluster.md
     - name: ESP-clusters configureren met Azure AD DS
       href: apache-domain-joined-configure-using-azure-adds.md
     - name: Azure AD-gebruikers synchroniseren met een HDInsight-cluster
@@ -30,26 +28,30 @@
       href: ../spark/apache-spark-eclipse-tool-plugin.md
     - name: Apache Oozie gebruiken in ESP-clusters
       href: hdinsight-use-oozie-domain-joined-clusters.md
-- name: Gegevens beveiligen
-  href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
-- name: Netwerktoegang
+    - name: Gegevens beveiligen
+      href: ../hdinsight-hadoop-create-linux-clusters-with-secure-transfer-storage.md
+    - name: Netwerktoegang
+      items:
+        - name: HDInsight in Azure VNet
+          href: ../hdinsight-extend-hadoop-virtual-network.md
+        - name: HDInsight verbinden met een on-premises netwerk
+          href: ../connect-on-premises-network.md
+        - name: Een Apache HBase-cluster maken in Azure VNet
+          href: ../hbase/apache-hbase-provision-vnet.md
+        - name: Replicatie van een Apache HBase-cluster in Azure VNet
+          href: ../hbase/apache-hbase-replication.md
+    - name: Bewaken met behulp van Azure Monitor-logboeken
+      items:
+        - name: Azure Monitor-logboeken gebruiken
+          href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
+        - name: Query's gebruiken met Azure Monitor-logboeken
+          href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
+        - name: Cluster-prestaties bewaken
+          href: ../hdinsight-key-scenarios-to-monitor.md
+- name: Procedures
   items:
-    - name: HDInsight in Azure VNet
-      href: ../hdinsight-extend-hadoop-virtual-network.md
-    - name: HDInsight verbinden met een on-premises netwerk
-      href: ../connect-on-premises-network.md
-    - name: Een Apache HBase-cluster maken in Azure VNet
-      href: ../hbase/apache-hbase-provision-vnet.md
-    - name: Replicatie van een Apache HBase-cluster in Azure VNet
-      href: ../hbase/apache-hbase-replication.md
-- name: Bewaken met behulp van Azure Monitor-logboeken
-  items:
-    - name: Azure Monitor-logboeken gebruiken
-      href: ../hdinsight-hadoop-oms-log-analytics-tutorial.md
-    - name: Query's gebruiken met Azure Monitor-logboeken
-      href: ../hdinsight-hadoop-oms-log-analytics-use-queries.md
-    - name: Cluster-prestaties bewaken
-      href: ../hdinsight-key-scenarios-to-monitor.md
+    - name: ESP-clusters maken en synchroniseren met on-premises
+      href: apache-domain-joined-create-configure-enterprise-security-cluster.md
 - name: Naslaginformatie
   items:
     - name: Codevoorbeelden
