--- a/articles/application-gateway/toc.yml
+++ b/articles/application-gateway/toc.yml
@@ -96,6 +96,7 @@
         - name: Azure-CLI
           href: tutorial-manage-web-traffic-cli.md
         - name: Template
+          displayName: 'ARM, Resource Manager, template'
           href: create-vmss-template.md
     - name: Een interne load balancer configureren
       items:
@@ -241,6 +242,8 @@
       href: /rest/api/applicationgateway
     - name: Azure Resource Manager
       href: ../azure-resource-manager/resource-group-overview.md
+    - name: Resource Manager-sjabloon
+      href: 'https://docs.microsoft.com/azure/templates/microsoft.network/allversions'
 - name: Resources
   items:
     - name: Auteursjablonen
