--- a/articles/iot-hub/TOC.yml
+++ b/articles/iot-hub/TOC.yml
@@ -159,6 +159,8 @@
           href: iot-hub-devguide-glossary.md
     - name: Beveiliging
       items:
+        - name: Aanbevelingen
+          href: /azure/iot-fundamentals/security-recommendations?context=azure/iot-hub/rc/rc
         - name: Fundamentele beveiliging
           href: /azure/iot-fundamentals/iot-security-ground-up?context=azure/iot-hub/rc/rc
         - name: Aanbevolen procedures voor beveiliging
