--- a/articles/openshift/toc.yml
+++ b/articles/openshift/toc.yml
@@ -25,6 +25,8 @@
           href: howto-create-tenant.md
         - name: Een object en gebruiker maken voor Azure AD-apps
           href: howto-aad-app-configuration.md
+    - name: Een zelfstandige Prometheus implementeren in een Azure Red Hat OpenShift-cluster
+      href: howto-deploy-prometheus.md
 - name: Naslaginformatie
   items:
     - name: CLI voor Azure Red Hat OpenShift
